// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store combine should fire only once 1`] = `
Object {
  "$UIEntities": Object {},
  "$UIIds": Array [],
  "$entities": Object {},
  "$ids": Array [],
  "filter": "",
}
`;

exports[`store combine should fire only once 2`] = `
Object {
  "$UIEntities": Object {
    "1": Object {
      "id": 1,
      "open": false,
    },
  },
  "$UIIds": Array [
    1,
  ],
  "$entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
  },
  "$ids": Array [
    1,
  ],
  "filter": "",
}
`;

exports[`store combine should fire only once 3`] = `
Object {
  "$UIEntities": Object {
    "1": Object {
      "id": 1,
      "open": false,
    },
  },
  "$UIIds": Array [
    1,
  ],
  "$entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "foo",
    },
  },
  "$ids": Array [
    1,
  ],
  "filter": "hello",
}
`;
